tests/fail/semantic/invalid_factor_type.cyt
gene [x: int]
{}

// args: --no-colour

// expected stderr:
// error: type `int` cannot be used in an execution factor list
//   ┌─ ../tests/fail/semantic/invalid_factor_type.cyt:1:10
//   │
// 1 │ gene [x: int]
//   │          ^^^ this type cannot be used as an execution factor